--- a/src/components/AboutMe/Terminal.module.scss
+++ b/src/components/AboutMe/Terminal.module.scss
@@ -15,3 +15,13 @@ i {
       color: $green;
     }
   }
+  .terminal {
+    p, li {
+      margin: 1rem 0;
+      color: $white;
+    }
+    a, a:visited {
+        animation: changeColors 3s infinite;
+        font-weight: bold;
+      }
+}
