fixed styling issues

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,10 @@
 @import "./variables.modules";
 
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+@import "./variables.modules";
+
+
 body {
     font-family: 'Roboto', Helvetica, sans-serif;
     font-size: 1.5vh;
